add link to home

--- a/views/payment.html
+++ b/views/payment.html
@@ -13,7 +13,7 @@
     <button id="pay-button">pay</button>
   </form>
   <p>status: -- <scan id="status-indicator">No Action</scan> --</p>
-  <p id="back" display="none">go back to store</p>
+  <a id="back" display="none" href="/">go back to store</a>
 
   <script type="text/javascript" src="https://cdn.omise.co/omise.js"></script>
   <script>
