add other payment methods for demonstration

--- a/views/payment.html
+++ b/views/payment.html
@@ -32,6 +32,7 @@
           amount: totalAmount,
           currency: "THB",
           defaultPaymentMethod: "credit_card",
+          otherPaymentMethods: "truemoney",
           submitLabel: "pay for amount",
           locale: "th",
           onCreateTokenSuccess: nonce => {
